# task-cli

./: .gitignore  LICENSE  README.md  preview.tape  pyproject.toml
src/task/: cli.py  db.py  task.py
src/task/commands/: README.md  add_task.py  delete_task.py  list_tasks.py  mark_done.py  mark_in_progress.py  update_task.py  util.py
