[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task"]

[project]
name = "task-cli"
version = "0.1.0"
requires-python = ">=3.8"
authors = [{name = "Sophie Paul"}]
maintainers = [{name = "Sophie Paul"}]
description = "A lightweight todo list application with a command-line interface"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Private :: Do Not Upload",
	"Programming Language :: Python :: 3"
]

[project.urls]
Repository = "https://github.com/soph-591/task-cli.git"

[project.scripts]
task-cli = "task.cli:main"
